--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "scripts": {
     "prepublishOnly": "np --no-cleanup --yolo --no-publish",
+    "start": "cd local && node ../cli",
     "test": "umi-test test/index.test.js",
     "cov": "umi-test test/index.test.js --coverage",
     "prettier": "prettier -c --write '**/*'"
