--- a/lib/generators/react-component/templates/package.json
+++ b/lib/generators/react-component/templates/package.json
@@ -4,9 +4,7 @@
   "main": "dist/index.umd.min.js",
   "module": "dist/index.esm.js",
   "files": [
-    "lib",
-    "src",
-    "ui"
+    "dist"
   ],
   "scripts": {
     "start": "umi dev",
@@ -15,13 +13,13 @@
     "lint": "npm run lint:es && npm run lint:ts && npm run lint:style",
     "lint:es": "eslint --ext .js --ext .jsx . --fix",
     "lint:ts": "tslint \"src/**/*.ts\" \"src/**/*.tsx\" --fix",
-    "lint:style": "stylelint \"**/*.less\" --fix",
+    "lint:style": "stylelint \"src/**/*.less\" --fix",
     "prepublishOnly": "npm run build && np --no-cleanup --yolo --no-publish"
   },
   "peerDependencies": {
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "umi": "2.x || ^2.9.0-0"
+    "react": "16.x",
+    "react-dom": "16.x",
+    "umi": "2.x || 3.x"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
