--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,8 @@
+/node_modules
+/yarn.lock
+package-lock.json
 .DS_Store
-node_modules
-
-/tests/e2e/videos/
-/tests/e2e/screenshots/
-
-# local env files
-.env.local
-.env.*.local
+coverage
 
 # Log files
 npm-debug.log*
@@ -16,17 +12,3 @@ yarn-error.log*
 # Editor directories and files
 .idea
 .vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw*
-
-# Lock
-package-lock.json
-
-# Umi
-.umi
-
-# Local
-local
